pkg/main/default/objects/ProductRoleSettings__c/ProductRoleSettings__c.object-meta.xml
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<label>Product Roles</label>
</CustomObject>