pkg/main/default/objects/ProductRoleSettings__c/fields/IsAdministrator__c.field-meta.xml
<CustomField>
	<fullName>IsAdministrator__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is Administrator</label>
	<type>Checkbox</type>
</CustomField>