pkg/main/default/objects/ProductRoleSettings__c/fields/ProductName__c.field-meta.xml
<CustomField>
	<fullName>ProductName__c</fullName>
	<label>Product Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>