pkg/main/default/objects/ProductRoleSettings__c/fields/RoleId__c.field-meta.xml
<CustomField>
	<fullName>RoleId__c</fullName>
	<label>DocuSign Role ID</label>
	<length>36</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>